# mdnsd

./: .gitignore  1035.c  1035.h  AUTHORS  Makefile  Makefile.am  autogen.sh  configure.ac  dns_sd_txt.c  dns_sd_txt.h  mdnsd.c  mdnsd.h  mhttp  mhttp.c  mquery  mquery.c  netwatch.c  netwatch.h  rfc1035.c  rfc1035.h  sdtxt.c  shash.c  shash.h  xht.c  xht.h
